syntax = "proto3";

package user.v1;

option go_package = "user/v1;userv1";

message User {
  string id = 1;
  string email = 2;
  repeated string tags = 3;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  string status = 1;
}
